add get company, integrate wiht account service
